# 1b_compiler_construction

./: .gitignore  README.md  build.sh  cfg.py  cfg_parser.py  common.py  dfa.py  g2.grammar  grammar_reader.py  lexer.py  main.py  nfa.py  parser_generator.py  parser_stub.py  pyproject.toml  pyproject_omit_generated.toml  recursive_descent_parser_example.py  regex.py  slang.grammar  slang_ast.py  util.py
slang/: fib.slang  if.slang  two_plus_three.slang
tests/: cfg_parser_test.py  test_cfg.py  test_common.py  test_dfa.py  test_dfa_from_nfa.py  test_dfa_from_nfa_from_regex_tagged.py  test_dfa_from_nfa_tagged.py  test_dfa_tagged.py  test_grammar_reader.py  test_lexer.py  test_merged_nfas.py  test_nfa.py  test_nfa_from_regex.py  test_nfa_internal.py  test_nfa_tagged.py  test_parser_generator.py  test_parser_stub.py  test_recursive_descent_parser.py  test_regex.py  test_slang_grammar.py  test_util.py
tests_generated_code/: test_generated_g2_parser.py  test_generated_slang_parser.py  test_slang_ast.py
