[project]
name = "1b-compiler-construction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-coverage>=0.0",
    "ruff>=0.14.10",
]

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
warn_unreachable = true
exclude = "^tests/"


[tool.pytest.ini_options]
addopts = "--cov=."

[tool.coverage.run]
omit = ["tests/*", "main.py"]

[tool.coverage.report]
exclude_also = [
	     # We don't need to check str and repr
	     "def __repr__",
	     "def __str__",

	     # We don't need to check main functions
	     "def main",

	     ]
