[project]
name = "1b-compiler-construction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-coverage>=0.0",
    "ruff>=0.14.10",
]

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
warn_unreachable = true
exclude = "^tests/"


[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --no-cov-on-fail"

[tool.coverage.run]
omit = ["tests/*", "tests_generated_code/*", "main.py"]

[tool.coverage.report]
exclude_also = [
	     # We don't need to check dunders
	     "def __repr__",
	     "def __str__",
	     "def __getitem__",
	     "def __hash__",
	     "def __eq__",
	     "def __len__",

	     # We don't need to check main functions
	     "def main",
	     "if __name__ == '__main__':",
	     'if __name__ == "__main__":',

	     # Unreachable and Unimplemented Code
	     "assert False,",
	     "raise NotImplementedError",

	     ]
skip_covered = true